# Exercises1

C4/M1/: Ex1.ipynb
C4/M2/: Ex1.ipynb  Ex1_.ipynb  Ex2_extraction.ipynb  Ex3.ipynb  Ex4.ipynb
C4/M3/: Ex1.ipynb
C4/M4/Ex1/chatbot/: .env.example  .gitignore  README.md  pyproject.toml
C4/M4/Ex1/chatbot/chroma_db/: chroma.sqlite3
C4/M4/Ex1/chatbot/docs/: company_policy.md
C4/M4/Ex1/chatbot/scripts/: ingest.py
C4/M4/Ex1/chatbot/src/mvc/: config.py  model.py
C4/M4/Ex1/chatbot/src/mvc/frontends/cli/: main.py  view.py
C4/M4/Ex1/chatbot/src/mvc/frontends/telegram/: bot.py  config.py  main.py
C4/M4/Ex1/chatbot/src/mvc/frontends/web/: app.py
C4/M4/Ex1/chatbot/src/mvc/services/: db.py  llm.py
Exercise2/chapters/: chap02.ipynb
Exercises1/Week2/: exercise1.ipynb
Projects/: P1_Fast_Food_Marketing_Campaign.ipynb
Projects/Applied Data Science/: P2_Student_Exam_Performance.ipynb
Week2/: Exercise2.3.ipynb  Exercises_2_Chipotle.ipynb  Exercises_3_Occupation.ipynb  M2-Exercise_3.1.ipynb  M2-Exercises_3.3.ipynb  M2-Exercises_4.ipynb  Module-2-Exercises_4.ipynb  Module-2_Exercises_5.ipynb  exercise1.ipynb
Week2/M1/: exercise1.txt
Week2/M2/: Exercise_3.2.ipynb  Exercises_3.3.ipynb  Exercises_5.ipynb  exercise1.ipynb
Week2/M3/: m3_1_exercise.ipynb  m3_2_exercise.ipynb  viz_exercises.ipynb
Week2/M4/: hypothesis_ex.ipynb
Week2/Projects/: P2_Student_Exam_Performance.ipynb
Week3/M1/: 01_scaling_knn.ipynb  ex1_reg.ipynb  ex2_reg.ipynb  ex3_class.ipynb  ex4_non_linear.ipynb
Week3/M2/: 01_scaling_knn.ipynb  Copy_of_ex1_multi_reg.ipynb  ex1_multi_reg.ipynb  (+1 more)
(+16 files in other folders)
