[project]
name = "mvc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "chainlit>=2.11.1",
    "chromadb>=1.5.9",
    "docling>=2.92.0",
    "langchain>=1.2.17",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "sentence-transformers>=5.4.1",
    "textual>=8.2.5",
]

[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "mvc"
module-root = "src"
